<resources>
    <string name="app_name">BooksStorage</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="action_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Background Preferences -->
    <string name="main_bg_title">Main Activity Image</string>
    <string name="favorite_team">Username</string>
    <string name="bg_settings_header">Layout Settings</string>
    <string name="favorite_team_header">Username Settings</string>
    <string name="contact_header">Preferred Contact Settings</string>

</resources>